Add assets for payment screen and navbar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">TaNaMesaApp</string>
-    <string name="title_home">Home</string>
+    <string name="title_home">Cardápio</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Conta</string>
 </resources>
