--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,12 +7,12 @@
 
     <string name="search_your_recipes">Search Your Recipes…</string>
     <string name="meal_categories">Categorias</string>
-    <string name="category">Category</string>
-    <string name="country">Country</string>
-    <string name="instructions">INSTRUCTIONS</string>
+    <string name="category">Categoria</string>
+    <string name="price">Preço</string>
+    <string name="description">Descrição</string>
     <string name="dot_loading">...</string>
-    <string name="Ingredients">INGREDIENTS</string>
-    <string name="youtube">YOUTUBE</string>
-    <string name="source">SOURCE</string>
+    <string name="Ingredients">Ingredientes</string>
+    <string name="youtube">Adicionar ao meu pedido</string>
+    <string name="source">Ver em Realidade Virtual</string>
     <string name="favorite">Favorite</string>
 </resources>
