Show product AR when available

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,6 @@
     <string name="dot_loading">...</string>
     <string name="Ingredients">Ingredientes</string>
     <string name="youtube">Adicionar ao meu pedido</string>
-    <string name="source">Ver em Realidade Virtual</string>
+    <string name="source">Ver em Realidade Aumentada</string>
     <string name="favorite">Favorite</string>
 </resources>
